--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             <div class="options">
                 <label><input type="radio" name="q36" value="Uric acid"> Uric acid</label>
                 <label><input type="radio" name="q36" value="K+"> K+</label>
-                <label><input type="radio" name="q36" value="Na+"> Na+</label>
+                <label><input type="radio" name="q36" value="Na +"> Na +</label>
                 <label><input type="radio" name="q36" value="Creatinine"> Creatinine</label>
                 <label><input type="radio" name="q36" value="Phosphate"> Phosphate</label>
             </div>
@@ -573,13 +573,17 @@
         </div>
         
         <div class="question" id="question-40">
-            <p>40- You are asked to review a 75-year-old female on the surgical wards due to hyperkalemia. Results are as follows:</p>
-            <p>Plasma                                Urine</p>
-            <p>Na• (mmol/l) 129                  5</p>
-            <p>K+ (mmol/l)    6.8</p>
-            <p>Urea (mmol/l) 26                350</p>
-            <p>Creatinine (µmol/l) 262</p>
-            <p>What is the most likely diagnosis?</p>
+            <p>40- You are asked to review a 75-year-old female on the surgical wards due to hyperkalemia. Results are as follows:
+                <br>
+                <br>Plasma &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Urine
+                <br>
+                <br>Na• (mmol/l) 129 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 5
+                <br>K+ (mmol/l) 6.8
+                <br>Urea (mmol/l) 26 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 350
+                <br>Creatinine (µmol/l) 262
+                <br>
+                <br>What is the most likely diagnosis?
+            </b>
             <div class="options">
                 <label><input type="radio" name="q40" value="Acute tubular necrosis"> Acute tubular necrosis</label>
                 <label><input type="radio" name="q40" value="Hyperosmolar non-ketotic coma"> Hyperosmolar non-ketotic coma</label>
@@ -708,7 +712,7 @@
             q29: "Snake bite",
             q30: "Treat anaemia with erythropoietin",
             q31: "Serum iron studies",
-            q32: "improved exercise tolerance",
+            q32: "Improved exercise tolerance",
             q33: "Long bone fractures",
             q34: "Serum electrolytes, urea and creatinine",
             q35: "Myelopathy",
@@ -718,7 +722,7 @@
             q39: "Fractional sodium excretion = 1.5%",
             q40: "Prerenal uraemia",
             q41: "Fractional urea excretion = 20%",
-            q42: "postural hypotension",
+            q42: "Postural hypotension",
             q43: "The fractional urea clearance",
             q44: "No action"
         };
